force-app/main/default/objects/FAQ_Contact_Mapping__c/FAQ_Contact_Mapping__c.object-meta.xml
<CustomObject>
    <description>Junction Object between Q’s &amp; A’s/How To and Contact Edition Mapping Objects</description>
    <label>FAQ Contact Mapping</label>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>FAQ Contact Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQ Contact Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>