force-app/main/default/objects/FAQ_Contact_Mapping__c/fields/Contact_Edition_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Contact_Edition_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Contact Edition Mapping</description>
    <label>Contact Edition Mapping</label>
    <referenceTo>Contact_Edition_Mapping__c</referenceTo>
    <relationshipLabel>FAQ Contact Mappings</relationshipLabel>
    <relationshipName>FAQ_Contact_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>