force-app/main/default/objects/FAQ_Contact_Mapping__c/fields/Q_s_A_s_How_To__c.field-meta.xml
<CustomField>
    <fullName>Q_s_A_s_How_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Q’s &amp; A’s/How object</description>
    <label>Q’s &amp; A’s/How To</label>
    <referenceTo>Q_s_A_s_How_To__c</referenceTo>
    <relationshipLabel>FAQ Contact Mappings</relationshipLabel>
    <relationshipName>FAQ_Contact_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>