force-app/main/default/objects/FAQ_Contact_Mapping__c/fields/Upvote_Downvote__c.field-meta.xml
<CustomField>
    <fullName>Upvote_Downvote__c</fullName>
    <description>Used to see whether Customer has Upvoted or Downvoted the FAQs on Customer Portal</description>
    <label>Upvote/Downvote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upvote</fullName>
            </value>
            <value>
                <fullName>Downvote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>